Fix - footer hidden by content

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,12 +1,26 @@
-.footer {
+@import '../../styles/_sizes.scss';
+
+.footerLeft {
   grid-column: 1 / 2;
   grid-row: 18 / auto;
 }
 
+.footerRight {
+  grid-column: 12/ 13;
+  grid-row: 18 / auto;
+  justify-self: center;
+}
+
 .notice {
+  // Depreciated style fallback for older browsers
   writing-mode: tb-rl;
   writing-mode: vertical-rl;
   white-space: nowrap;
-  color: white;
-  margin-left: 10px;
+  margin: 0 10px;
+}
+
+@include screen-xl {
+  .notice {
+    font-size: 20px;
+  }
 }
